crates/wac-parser/tests/resolution/fail/missing-err-result-type.wac
package test:comp;

import x: interface {
    f: func() -> result;
};

let i = new foo:bar { x };
